AuthService 구현 - 직렬화 문제 해결(원인: 직렬화 과정 중 ID 손실)